--- a/Clash/GeneralClashConfig.yml
+++ b/Clash/GeneralClashConfig.yml
@@ -261,7 +261,7 @@ cfw-bypass:
   - "*alipay*"
   - "*appzapp*"
   - "*baidupcs*"
-  - "*bilibili*"
+#  - "*bilibili*"
   - "*ccgslb*"
   - "*chinacache*"
   - "*duobao*"
